jlox/src/ntalbs/lox/Parser.java
package ntalbs.lox;

import java.util.ArrayList;
import java.util.List;

import static ntalbs.lox.TokenType.BANG;
import static ntalbs.lox.TokenType.BANG_EQUAL;
import static ntalbs.lox.TokenType.EOF;
import static ntalbs.lox.TokenType.EQUAL_EQUAL;
import static ntalbs.lox.TokenType.FALSE;
import static ntalbs.lox.TokenType.GREATER;
import static ntalbs.lox.TokenType.GREATER_EQUAL;
import static ntalbs.lox.TokenType.LEFT_PAREN;
import static ntalbs.lox.TokenType.LESS;
import static ntalbs.lox.TokenType.LESS_EQUAL;
import static ntalbs.lox.TokenType.MINUS;
import static ntalbs.lox.TokenType.NIL;
import static ntalbs.lox.TokenType.NUMBER;
import static ntalbs.lox.TokenType.PLUS;
import static ntalbs.lox.TokenType.PRINT;
import static ntalbs.lox.TokenType.RIGHT_PAREN;
import static ntalbs.lox.TokenType.SEMICOLON;
import static ntalbs.lox.TokenType.SLASH;
import static ntalbs.lox.TokenType.STAR;
import static ntalbs.lox.TokenType.STRING;
import static ntalbs.lox.TokenType.TRUE;

public class Parser {
  private static class ParseError extends RuntimeException {}

  private List<Token> tokens;
  private int current = 0;

  Parser(List<Token> tokens) {
    this.tokens = tokens;
  }

  List<Stmt> parse() {
    List<Stmt> statements = new ArrayList<>();
    while (!isAtEnd()) {
      statements.add(statements());
    }
    return statements;
  }

  private Stmt statements() {
    if (match(PRINT)) return printStatement();

    return expressionStatement();
  }

  private Stmt printStatement() {
    Expr value = expression();
    consume(SEMICOLON, "Expect ';' after value.");
    return new Stmt.Print(value);
  }

  private Stmt expressionStatement() {
    Expr expr = expression();
    consume(SEMICOLON, "Expect ';' after expression.");
    return new Stmt.Expression(expr);
  }

  private Expr expression() {
    return equality();
  }

  private Expr equality() {
    Expr expr = comparison();
    while (match(BANG_EQUAL,EQUAL_EQUAL)) {
      Token operator = previous();
      Expr right = comparison();
      expr = new Expr.Binary(expr, operator, right);
    }

    return expr;
  }

  private Expr comparison() {
    Expr expr = term();

    while (match(GREATER, GREATER_EQUAL, LESS, LESS_EQUAL)) {
      Token operator = previous();
      Expr right = term();
      expr = new Expr.Binary(expr, operator, right);
    }

    return expr;
  }

  private Expr term() {
    Expr expr = factor();

    while (match(MINUS, PLUS)) {
      Token operator = previous();
      Expr right = factor();
      expr = new Expr.Binary(expr, operator, right);
    }

    return expr;
  }

  private Expr factor() {
    Expr expr = unary();

    while (match(SLASH, STAR)) {
      Token operator = previous();
      Expr right = unary();
      expr = new Expr.Binary(expr, operator, right);
    }

    return expr;
  }

  private Expr unary() {
      if (match(BANG, MINUS)) {
        Token operator = previous();
        Expr right = unary();
        return new Expr.Unary(operator, right);
      }

      return primary();
  }

  private Expr primary() {
    if (match(FALSE)) return new Expr.Literal(false);
    if (match(TRUE)) return new Expr.Literal(true);
    if (match(NIL)) return new Expr.Literal(null);

    if (match(NUMBER, STRING)) {
      return new Expr.Literal(previous().literal);
    }

    if (match(LEFT_PAREN)) {
      Expr expr = expression();
      consume(RIGHT_PAREN, "Expect ')' after expression");
      return new Expr.Grouping(expr);
    }
    throw error(peek(), "Expected expression.");
  }

  private Token consume(TokenType type, String message) {
    if (check(type)) return advance();
    throw error(peek(), message);
  }

  private ParseError error(Token token, String message) {
    Lox.error(token, message);
    return new ParseError();
  }

  private void synchronize() {
    advance();
    while (!isAtEnd()) {
      if (previous().type == SEMICOLON) return;

      switch (peek().type) {
        case CLASS: case FOR: case IF: case PRINT:
        case RETURN: case VAR: case WHILE:
          return;
      }

      advance();
    }
  }

  private boolean match(TokenType... types) {
    for (TokenType type : types) {
      if (check(type)) {
        advance();
        return true;
      }
    }
    return false;
  }

  private Token advance() {
    if (!isAtEnd()) current++;
    return previous();
  }

  private Token peek() {
    return tokens.get(current);
  }

  private Token previous() {
    return tokens.get(current - 1);
  }

  private boolean isAtEnd() {
    return peek().type == EOF;
  }

  private boolean check(TokenType type) {
    if (isAtEnd()) return false;
    return peek().type == type;
  }
}
